fixed tests for Java17