@@ -1,38 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>mkr</groupId>
-	<artifactId>util-dump</artifactId>
-	<name>mkr util dump</name>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+   <modelVersion>4.0.0</modelVersion>
+   <groupId>mkr</groupId>
+   <artifactId>util-dump</artifactId>
+   <name>mkr util dump</name>
 
-	<parent>
-		<groupId>mkr</groupId>
-		<artifactId>util-pom</artifactId>
-		<version>1.20211012.1</version>
-	</parent>
+   <parent>
+      <groupId>mkr</groupId>
+      <artifactId>util-pom</artifactId>
+      <version>1.20211012.1</version>
+   </parent>
 
-	<dependencies>
-		<dependency>
-			<groupId>mkr</groupId>
-			<artifactId>util-base</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.iq80.snappy</groupId>
-			<artifactId>snappy</artifactId>
-			<version>0.3</version>
-		</dependency>
-		<dependency>
-			<groupId>org.lz4</groupId>
-			<artifactId>lz4-java</artifactId>
-			<version>1.6.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.github.luben</groupId>
-			<artifactId>zstd-jni</artifactId>
-			<version>1.3.4-4</version>
-		</dependency>
-	</dependencies>
+   <dependencies>
+      <dependency>
+         <groupId>mkr</groupId>
+         <artifactId>util-base</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>org.iq80.snappy</groupId>
+         <artifactId>snappy</artifactId>
+         <version>0.3</version>
+      </dependency>
+      <dependency>
+         <groupId>org.lz4</groupId>
+         <artifactId>lz4-java</artifactId>
+         <version>1.6.0</version>
+      </dependency>
+      <dependency>
+         <groupId>com.github.luben</groupId>
+         <artifactId>zstd-jni</artifactId>
+         <version>1.3.4-4</version>
+      </dependency>
+   </dependencies>
 
+   <build>
+      <plugins>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.22.2</version>
+            <configuration>
+               <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
+            </configuration>
+         </plugin>
+      </plugins>
+   </build>
 
 </project>
 
